--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://neondb_owner:npg_jpbF5x0hvQGC@ep-icy-sound-a1q58rky-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
 
 # Server
 PORT=3000
