--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^4.16.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
