Deleted overlapping files

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "prisma:reset": "prisma migrate reset --force",
     "prisma:studio": "prisma studio",
     "db:seed": "node prisma/seed.js",
-    "test": "node test-api.js",
-    "postman-test": "newman run postman-collection.json"
+    "test": "node test-api.js"
   },
   "keywords": [
     "collaborative",
