`Update documentation and scripts for Vercel deployment`

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
-# Database
-DATABASE_URL="postgresql://neondb_owner:npg_jpbF5x0hvQGC@ep-icy-sound-a1q58rky-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
+# Database - Replace with your own database connection string
+DATABASE_URL="postgresql://username:password@hostname:port/database?sslmode=require"
 
 # Server
 PORT=3000
-NODE_ENV=development
+NODE_ENV=production
 
-# For production, you might want to use:
-# DATABASE_URL="file:/app/data/production.db"
-# NODE_ENV=production
+# For local development:
+# NODE_ENV=development
