--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "collaborative-form-filler",
+  "name": "collaborative-forms-monorepo",
   "version": "1.0.0",
-  "description": "A real-time collaborative form filling system",
-  "main": "src/index.js",
+  "description": "A real-time collaborative form filling system - Fullstack Monorepo",
+  "private": true,
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:seed": "node prisma/seed.js",
-    "prisma:reset": "prisma migrate reset --force",
-    "db:seed": "node prisma/seed.js",
-    "test": "node test-api.js",
-    "vercel-build": "prisma generate && prisma db push",
-    "db:check": "node vercel-db-check.js"
+    "install:all": "npm install && npm install --prefix client && npm install --prefix server",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:client": "cd client && npm run dev",
+    "dev:server": "cd server && npm run dev",
+    "start": "cd server && npm start",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "cd client && npm run build",
+    "build:server": "cd server && npm run build",
+    "test": "cd server && npm run test",
+    "prisma:generate": "cd server && npm run prisma:generate",
+    "prisma:migrate": "cd server && npm run prisma:migrate",
+    "prisma:seed": "cd server && npm run prisma:seed",
+    "prisma:reset": "cd server && npm run prisma:reset",
+    "db:check": "cd server && node ../test-db-connection.js"
   },
   "keywords": [
     "collaborative",
     "form",
     "socket.io",
-    "real-time"
+    "real-time",
+    "fullstack",
+    "monorepo"
   ],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "@prisma/client": "^4.16.2",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "prisma": "^4.16.2",
-    "socket.io": "^4.7.2"
-  },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "concurrently": "^8.2.2"
   },
-  "prisma": {
-    "seed": "node prisma/seed.js"
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
