--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,70 @@
+# Fullstack Collaborative Form App - Docker Compose
+version: "3.8"
+
 services:
-  app:
-    build: .
+  # Redis for real-time features
+  redis:
+    image: redis:7-alpine
+    container_name: forms-redis
     ports:
-      - "${PORT:-3000}:3000"
-    environment:
-      - PORT=3000
-      - NODE_ENV=development
-      - DATABASE_URL=${DATABASE_URL} # Ensure this line is present and correct
+      - "6379:6379"
     volumes:
-      - ./prisma:/app/prisma
-      - ./public:/app/public
-      - ./src:/app/src
-      - /app/node_modules
-    command: >
-      sh -c "npx prisma generate && 
-             npx prisma db push && 
-             npx prisma db seed &&
-             npm start"
+      - redis_data:/data
     restart: unless-stopped
-    networks:
-      - app-network
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # Backend Server
+  server:
+    build:
+      context: ./server
+      dockerfile: Dockerfile
+    container_name: forms-server
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=production
+      - PORT=3000
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=redis://redis:6379
+      - CLIENT_URL=http://localhost:3001
+    volumes:
+      - ./server:/app
+      - /app/node_modules
+    depends_on:
+      redis:
+        condition: service_healthy
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # Frontend Client (development mode)
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    container_name: forms-client
+    ports:
+      - "3001:3001"
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - ./client:/app
+      - /app/node_modules
+    depends_on:
+      - server
+    restart: unless-stopped
+
+volumes:
+  redis_data:
+    driver: local
 
 networks:
-  app-network:
-    driver: bridge
+  default:
+    name: forms-network
