--- a/server/.env.example
+++ b/server/.env.example
@@ -2,10 +2,19 @@
 DATABASE_URL="postgresql://user:password@host:port/database"
 PORT=3000
 NODE_ENV=development
+
+# Redis Configuration (Local development - use localhost, Production - use Upstash)
 REDIS_URL=redis://localhost:6379
+# For Upstash Redis:
+# REDIS_URL=redis://default:your-upstash-token@your-redis-host.upstash.io:6379
+# UPSTASH_REDIS_REST_URL=https://your-redis-id.upstash.io
+# UPSTASH_REDIS_REST_TOKEN=your-upstash-token
+
+# Client Configuration
 CLIENT_URL=http://localhost:3001
 
-# Optional: For production deployment  
-# DATABASE_URL="postgresql://neondb_owner:npg_jpbF5x0hvQGC@ep-icy-sound-a1q58rky-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
-# REDIS_URL=redis://your-redis-url:port
+# For production deployment:
+# DATABASE_URL="postgresql://neondb_owner:your-token@your-host.neon.tech/neondb?sslmode=require"
+# REDIS_URL=redis://default:your-upstash-token@your-redis-host.upstash.io:6379
 # CLIENT_URL=https://your-client-domain.vercel.app
+# NODE_ENV=production
