--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^4.16.2",
+    "@upstash/redis": "^1.35.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
